[package]
name = "supapro-telegram"
version = "0.2.2"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
chrono = "0.4.19"
log = "0.4.17"
once_cell = "1.11.0"
once-cell-regex = "0.2.1"
pretty_env_logger = "0.4.0"
regex = "1.5.6"
serde_json = "1.0.81"
teloxide = { version = "0.9.0", features = ["auto-send", "macros"] }
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["add-extension", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }

[profile.release]
lto = true
