[package]
name = "supapro-telegram"
version = "0.2.2"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
chrono = "0.4.22"
log = "0.4.17"
once_cell = "1.15.0"
once-cell-regex = "0.2.1"
pretty_env_logger = "0.4.0"
regex = "1.6.0"
serde_json = "1.0.85"
teloxide = { version = "0.10.1", features = ["auto-send", "macros"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.10"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["add-extension", "trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }

[profile.release]
lto = true
